syntax = "proto3";

option go_package = "github.com/the-swiply/profile/pkg/api/profile";

import "google/api/annotations.proto";

package swiply.profile;

service Photo {
  rpc Create(CreatePhotoRequest) returns (CreatePhotoResponse) {
    option (google.api.http) = {
      post: "/v1/photo/create"
      body: "*"
    };
  }

  rpc Get(GetPhotoRequest) returns (GetPhotoResponse) {
    option (google.api.http) = {
      get: "/v1/photo/{profile_id}/{photo_id}"
    };
  }

  rpc List(ListPhotoRequest) returns (ListPhotoResponse) {
    option (google.api.http) = {
      get: "/v1/photo/{profile_id}"
    };
  }

  rpc Delete(DeletePhotoRequest) returns (DeletePhotoResponse) {
    option (google.api.http) = {
      post: "/v1/photo/delete"
      body: "*"
    };
  }

  rpc Reorder(ReorderPhotoRequest) returns (ReorderPhotoResponse) {
    option (google.api.http) = {
      post: "/v1/photo/reorder"
      body: "*"
    };
  }
}

message ProfilePhoto {
  string id = 1;
  repeated bytes content = 2;
}

message CreatePhotoRequest {
  repeated bytes content = 1;
}
message CreatePhotoResponse {
  string id = 1;
}

message GetPhotoRequest {
  string profile_id = 1;
  string photo_id = 2;
}
message GetPhotoResponse {
  ProfilePhoto photo = 1;
}

message ListPhotoRequest {
  string profile_id = 1;
}
message ListPhotoResponse {
  repeated ProfilePhoto photos = 1;
}

message DeletePhotoRequest {
  string id = 1;
}
message DeletePhotoResponse {
  string id = 1;
}

message ReorderPhotoRequest {
  repeated string id = 1;
}
message ReorderPhotoResponse {}